Add lein assemble

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 <a href="https://github.com/chartbeat-labs/cljbeat-opentsdb">cljbeat-opentsdb</a> - OpenTSDB client library</li>
 <li>
 <a href="https://github.com/chartbeat-labs/cljbeat-options">cljbeat-options</a> - Command line option parsing utilities</li>
+<li>
+<a href="https://github.com/chartbeat-labs/lein-assembly">lein-assemble</a> - Leiningen plugin to create arbitrary assemblies</li>
 </ul>
       </section>
       <footer>
